--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -8,7 +8,7 @@ html(lang="en")
     link(rel='alternate', type='application/rss+xml', title=site_title + "RSS Feed", href='/blog/rss.xml')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lekton')
-    link(rel="stylesheet", href='/css/main.css')
+    link(rel="stylesheet", href='/main.css')
     //if lt IE 9
       <script src="/js/html5shiv.js"></script>
   body(class="page-#{ current.path[0] } #{ current.path.join('-') }")
