--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body{
   background: url('https://ununsplash.imgix.net/uploads/1413387158190559d80f7/6108b580?q=75&fm=jpg&s=d1c3df390a81d3371d05730a396ca390');
 background-size: cover;
   color: #444;
-  margin: 0;
+  margin: 0px;
 }
 
 h1{
