--- a/_harp/main.css
+++ b/_harp/main.css
@@ -4,7 +4,7 @@ body{
   padding: 50px 20px 0;
   background: url('https://ununsplash.imgix.net/uploads/1413387158190559d80f7/6108b580?q=75&fm=jpg&s=d1c3df390a81d3371d05730a396ca390');
 background-size: cover;
-  color: #444;
+  color: #ddc826;
   margin: 0px;
 }
 
