--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ background-size: cover;
 h1{
   font-size: 65px;
   line-height: 1.2em;
-  border-bottom: #CCC solid 1px;
+  border-bottom: #ddc826 solid 1px;
   padding: 20px 0;
 }
 
