--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -9,6 +9,8 @@ html(lang="en")
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic')
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lekton')
     link(rel="stylesheet", href='/main.css')
+    link(rel="stylesheet", href='/swiper.css')
+    script(src='swiper.js')
     //if lt IE 9
       <script src="/js/html5shiv.js"></script>
   body(class="page-#{ current.path[0] } #{ current.path.join('-') }")
