--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ h1{
   font-size: 65px;
   line-height: 1.2em;
   border-bottom: #ddc826 solid 1px;
-  padding: 20px 0px;
+  padding: 20px 0;
 }
 
 h3{
