Added markup for slider

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,2 +1,10 @@
 h1 In the Burgh
 h3 Experiments in flatness
+
+
+div(class="swiper-container")
+    div(class="swiper-wrapper")
+        div(class="swiper-slide")
+            p Text for one here
+        div(class="swiper-slide")
+            p Text for two here
