--- a/_harp/_layout.jade
+++ b/_harp/_layout.jade
@@ -10,6 +10,7 @@ html(lang="en")
     link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lekton')
     link(rel="stylesheet", href='/main.css')
     link(rel="stylesheet", href='/swiper.css')
+    script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='swiper.js')
     //if lt IE 9
       <script src="/js/html5shiv.js"></script>
@@ -17,3 +18,4 @@ html(lang="en")
     header.masthead
 
               != yield
+     script(src='script.js')
