Added content-slider markup

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -5,6 +5,8 @@ h3 Experiments in flatness
 div(class="swiper-container")
     div(class="swiper-wrapper")
         div(class="swiper-slide")
-            p Text for one here
+            div(class="content-slide")
+                p Text for one here
         div(class="swiper-slide")
-            p Text for two here
+            div(class="content-slide")
+                p Text for two here
