Script not working

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -10,3 +10,19 @@ div(class="swiper-container")
         div(class="swiper-slide")
             div(class="content-slide")
                 p Text for two here
+
+script.
+    var mySwiper = new Swiper('.swiper-container',{
+        pagination: '.pagination',
+        loop:true,
+        grabCursor: true,
+        paginationClickable: true
+      })
+      $('.arrow-left').on('click', function(e){
+        e.preventDefault()
+        mySwiper.swipePrev()
+      })
+      $('.arrow-right').on('click', function(e){
+        e.preventDefault()
+        mySwiper.swipeNext()
+      })
