New compilation and commit

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,15 +1,15 @@
 h1 In the Burgh
 h3 Experiments in flatness
 
-
-div(class="swiper-container")
-    div(class="swiper-wrapper")
-        div(class="swiper-slide")
-            div(class="content-slide")
-                p Text for one here
-        div(class="swiper-slide")
-            div(class="content-slide")
-                p Text for two here
+div(class="device")
+    div(class="swiper-container")
+        div(class="swiper-wrapper")
+            div(class="swiper-slide")
+                div(class="content-slide")
+                    p Text for one here
+            div(class="swiper-slide")
+                div(class="content-slide")
+                    p Text for two here
 
 script.
     var mySwiper = new Swiper('.swiper-container',{
