--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -10,6 +10,7 @@ div(class="device")
             div(class="swiper-slide")
                 div(class="content-slide")
                     p Text for two here
+    div(class="pagination")
 
 script.
     var mySwiper = new Swiper('.swiper-container',{
