--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -1,6 +1,8 @@
 h2 Experiments in flatness
 
 div(class="device")
+    a(class="arrow-left" href="#")
+    a(class="arrow-right" href="#")
     div(class="swiper-container")
         div(class="swiper-wrapper")
             div(class="swiper-slide")
