removed slider dot pagination

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -15,10 +15,8 @@ div(class="device")
 
 script.
     var mySwiper = new Swiper('.swiper-container',{
-        pagination: '.pagination',
         loop:true,
-        grabCursor: true,
-        paginationClickable: true
+        grabCursor: true
       })
       $('.arrow-left').on('click', function(e){
         e.preventDefault()
