--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -7,7 +7,7 @@ div(class="device")
         div(class="swiper-wrapper")
             div(class="swiper-slide")
                 div(class="content-slide")
-                    p Text for one here
+                    img(src="http://tomnielsenfineart.com/images/paintings/SEASCAPE-MARINE-PAINTING-FIRST-LIGHT-SURF.jpg")
             div(class="swiper-slide")
                 div(class="content-slide")
                     p Text for two here
