--- a/swiper.css
+++ b/swiper.css
@@ -24,7 +24,7 @@ Basic Swiper Styles
   margin: 5px auto;
   position: relative;
 }
-.content-slider {
+.content-slide {
     height: 300px;
 }
 .device .arrow-left {
