--- a/swiper.css
+++ b/swiper.css
@@ -20,7 +20,7 @@ Basic Swiper Styles
   width: 640px;
   height: 300px;
   padding: 30px 40px;
-  background: #111;
+  background: rgba(0,0,0,.75);
   margin: 5px auto;
   position: relative;
 }
