Iteration over images

--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -13,6 +13,13 @@ div(class="device")
                     p Text for two here
     div(class="pagination")
 
+
+ul
+  each article, slug in public.blog._data
+    li
+      img(src="/blog/#{article.photo}")
+
+
 script.
     var mySwiper = new Swiper('.swiper-container',{
         loop:true,
