--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -5,12 +5,10 @@ div(class="device")
     a(class="arrow-right" href="#")
     div(class="swiper-container")
         div(class="swiper-wrapper")
+        each article, slug in public.blog._data
             div(class="swiper-slide")
                 div(class="content-slide")
-                    img(src="http://tomnielsenfineart.com/images/paintings/SEASCAPE-MARINE-PAINTING-FIRST-LIGHT-SURF.jpg")
-            div(class="swiper-slide")
-                div(class="content-slide")
-                    p Text for two here
+                    img(src="/blog/#{article.photo}")
     div(class="pagination")
 
 
