--- a/swiper.css
+++ b/swiper.css
@@ -27,6 +27,12 @@ Basic Swiper Styles
 .content-slide {
     height: 300px;
 }
+
+.content-slide img {
+    width: 100%;
+    height: 300px;
+}
+
 .device .arrow-left {
   background: url(img/arrows.png) no-repeat left top;
   position: absolute;
