--- a/swiper.css
+++ b/swiper.css
@@ -17,20 +17,20 @@ Basic Swiper Styles
 ================================================================*/
 
 .device {
-  width: 640px;
-  height: 300px;
+  width: 100%;
+  height: 450px;
   padding: 30px 40px;
   background: rgba(0,0,0,.75);
   margin: 5px auto;
   position: relative;
 }
 .content-slide {
-    height: 300px;
+    height: 450px;
 }
 
 .content-slide img {
     width: 100%;
-    height: 300px;
+    height: 450px;
 }
 
 .device .arrow-left {
