--- a/swiper.css
+++ b/swiper.css
@@ -19,7 +19,7 @@ Basic Swiper Styles
 .device {
   width: 100%;
   height: 550px;
-  padding: 0px 40px;
+  padding: 0px;
   background: rgba(0,0,0,.75);
   margin: 5px auto;
   position: relative;
@@ -36,7 +36,7 @@ Basic Swiper Styles
 .device .arrow-left {
   background: url(img/arrows.png) no-repeat left top;
   position: absolute;
-  left: 10px;
+  left: 50px;
   top: 50%;
   margin-top: -15px;
   width: 17px;
@@ -45,7 +45,7 @@ Basic Swiper Styles
 .device .arrow-right {
   background: url(img/arrows.png) no-repeat left bottom;
   position: absolute;
-  right: 10px;
+  right: 50px;
   top: 50%;
   margin-top: -15px;
   width: 17px;
