--- a/main.css
+++ b/main.css
@@ -6,8 +6,7 @@ body{
   font-family: "Lekton";
   text-align: center;
   padding: 50px 20px 0;
-  background: url('https://ununsplash.imgix.net/uploads/1413387158190559d80f7/6108b580?q=75&fm=jpg&s=d1c3df390a81d3371d05730a396ca390');
-background-size: cover;
+  background: #f5f5f5;
   color: #ddc826;
   margin: 0px;
 }
