--- a/_harp/swiper.css
+++ b/_harp/swiper.css
@@ -18,19 +18,19 @@ Basic Swiper Styles
 
 .device {
   width: 100%;
-  height: 550px;
+  height: 100vh;
   padding: 0px;
   background: rgba(0,0,0,.75);
   margin: 5px auto;
   position: relative;
 }
 .content-slide {
-    height: 550px;
+    height: 100vh;
 }
 
 .content-slide img {
     width: 100%;
-    height: 550px;
+    height: 100vh;
 }
 
 .device .arrow-left {
