--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -7,7 +7,7 @@ div(class="device")
                 div(class="swiper-slide")
                     div(class="content-slide")
                         img(src="/blog/#{article.photo}")
-                        p(class="title") #{ article.title }
+                        p(class="title") #{ article.title } #{ article.description }
     div(class="pagination")
 
 script.
