--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -7,9 +7,8 @@ div(class="device")
                 div(class="swiper-slide")
                     div(class="content-slide")
                         img(src="/blog/#{article.photo}")
-                        p(class="title")
-                            h5 #{ article.title }
-                            p #{ article.description }
+                        h5 #{ article.title }
+                        p(class="title") #{ article.description }
     div(class="pagination")
 
 script.
