--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -6,8 +6,9 @@ div(class="device")
             each article, slug in public.blog._data
                 div(class="swiper-slide")
                     div(class="content-slide" style="background: url('/blog/#{article.photo}'); background-size: cover; background-position: center;")
-                        h5 #{ article.title }
-                        p(class="title") #{ article.description }
+                        div(class="title")
+                            h5 #{ article.title }
+                            p #{ article.description }
     div(class="pagination")
 
 script.
