--- a/_harp/main.css
+++ b/_harp/main.css
@@ -14,7 +14,7 @@ body{
     position: absolute;
     top: 0;
     padding: .5em;
-    background: black;
+    background: rgba(0,0,0,.75);
     width: 10%;
     text-align: center;
 }
