--- a/_harp/main.css
+++ b/_harp/main.css
@@ -12,7 +12,7 @@ body{
 
 .title {
     position: absolute;
-    top: 0;
+    bottom: 0;
     padding: .5em;
     background: rgba(0,0,0,.75);
     width: 10%;
