--- a/_harp/main.css
+++ b/_harp/main.css
@@ -13,8 +13,8 @@ body{
 .title {
     position: absolute;
     bottom: 0;
-    padding: .5em;
-    background: rgba(0,0,0,.75);
+    padding: 0 .5em;
+    background: rgba(0,0,0,.5);
     width: 100vw;
     text-align: center;
 }
