Swiper container width 100%

--- a/_harp/swiper.css
+++ b/_harp/swiper.css
@@ -122,8 +122,7 @@ sizes, pagination, etc.
 .swiper-container {
 	/* Specify Swiper's Size: */
 
-	/*width:200px;
-	height: 100px;*/
+	width:100%;
 }
 .swiper-slide {
 	/* Specify Slides's Size: */
