--- a/_harp/main.css
+++ b/_harp/main.css
@@ -12,10 +12,10 @@ body{
 
 .title {
     position: absolute;
-    bottom: 0;
+    top: 0;
     padding: 0 .5em;
     background: rgba(0,0,0,.5);
-    width: 100vw;
+    width: 10vw;
     text-align: center;
 }
 
