Continuing down a right aligned image theme

--- a/_harp/main.css
+++ b/_harp/main.css
@@ -14,8 +14,8 @@ body{
     position: absolute;
     top: 0;
     padding: 0 .5em;
-    width: 20vw;
-    text-align: center;
+    width: 35vw;
+    text-align: left;
 }
 
 h2{
