Moved bg properties out of style attribute, leaving just bg url

--- a/_harp/swiper.css
+++ b/_harp/swiper.css
@@ -32,6 +32,9 @@ Basic Swiper Styles
 .content-slide img {
     width: 100%;
     height: 100vh;
+    background-size: contain;
+    background-position: right;
+    background-repeat: no-repeat;
 }
 
 .device .arrow-left {
