--- a/main.css
+++ b/main.css
@@ -13,9 +13,8 @@ body{
 .title {
     position: absolute;
     top: 0;
-    left: 800px;
-    padding: 0 2em 0 0;
-    width: 35vw;
+    padding: 0 20vw;
+    width: 100vw;
     text-align: left;
 }
 
