--- a/main.css
+++ b/main.css
@@ -12,8 +12,8 @@ body{
 
 .title {
     position: absolute;
-    top: 0;
-    padding: 0 10em;
+    bottom: 0;
+    padding: 0 15em;
     width: 100vw;
     text-align: left;
 }
