--- a/main.css
+++ b/main.css
@@ -13,8 +13,9 @@ body{
 .title {
     position: absolute;
     bottom: 0;
-    padding: 0 15em;
+    padding: 0 25em;
     width: 100vw;
+    background: rgba(0,0,0,.5)
     text-align: left;
 }
 
