--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body{
     bottom: 0;
     padding: 0 25em;
     width: 100vw;
-    background: rgba(0,0,0,.5)
+    background: rgba(0,0,0,.5);
     text-align: left;
 }
 
