--- a/main.css
+++ b/main.css
@@ -13,9 +13,9 @@ body{
 .title {
     position: absolute;
     bottom: 0;
-    color: #111;
-    padding: 0 25em;
-    width: 100vw;
+    color: #fff;
+    padding: 0 0 0 1em;
+    width: 20vw;
     text-align: left;
 }
 
