--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ body{
     .title {
     position: absolute;
     bottom: 0;
+    padding: 0 .5em;
     width: 100vw;
     text-align: center;
     }
