--- a/_harp/main.css
+++ b/_harp/main.css
@@ -19,7 +19,7 @@ body{
     text-align: left;
 }
 
-@media screen and (max-width: 40.063em) {
+@media screen and (max-width: 1024px) {
     .title {
     position: absolute;
     bottom: 0;
