--- a/main.css
+++ b/main.css
@@ -13,20 +13,21 @@ body{
 .title {
     position: absolute;
     bottom: 0;
+    padding: 0 .5em;
+    width: 100vw;
+    text-align: center;
+    }
+
+
+@media screen and (min-width: 1024px) {
+   .title {
+    position: absolute;
+    bottom: 0;
     color: #fff;
     padding: 0 0 0 1em;
     width: 20vw;
     text-align: left;
 }
-
-@media screen and (max-width: 1024px) {
-    .title {
-    position: absolute;
-    bottom: 0;
-    padding: 0 .5em;
-    width: 100vw;
-    text-align: center;
-    }
 }
 
 h2{
