--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -17,7 +17,7 @@ script.
         grabCursor: true,
         autoplay: 5000,
         speed: 300,
-        slidesPerView: 'auto'
+        slidesPerView: 2
       })
       $('.arrow-left').on('click', function(e){
         e.preventDefault()
