--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -16,8 +16,7 @@ script.
         loop:true,
         grabCursor: true,
         autoplay: 5000,
-        speed: 300,
-        slidesPerView: 2
+        speed: 300
       })
       $('.arrow-left').on('click', function(e){
         e.preventDefault()
