--- a/_harp/index.jade
+++ b/_harp/index.jade
@@ -16,7 +16,10 @@ script.
         loop:true,
         grabCursor: true,
         autoplay: 5000,
-        speed: 300
+        speed: 300,
+        centeredSlides: true,
+        slidesPerView: 3,
+        watchActiveIndex: true
       })
       $('.arrow-left').on('click', function(e){
         e.preventDefault()
